[package]
name = "resizing-vec"
version = "0.1.4"
authors = ["Dario <dario.heinisch@gmail.com>"]
edition = "2021"
description = "An automatic resizing vector for data with linear increasing ids"
license = "MIT"
documentation = "https://docs.rs/resizing-vec/latest/resizing_vec/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false